--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ gevent==23.9.1
 gevent-websocket==0.10.1
 gitignore-parser==0.1.9
 greenlet==3.0.1
+gunicorn==21.2.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
